--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           export_default_credentials: true
           
       - name: Upload files to bucket
-        run: gsutil -m rsync -R ./build gs://"$BUCKET"
+        run: gsutil -m cp -R ./build gs://"$BUCKET"
       
       - name: Allow AllUsers
         run: gsutil -m acl ch -R AllUsers:R gs://"$BUCKET"
