--- a/package.json
+++ b/package.json
@@ -1,54 +1,34 @@
 {
-  "name": "guilhermeluiz.dev",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint --fix \"**/src/*.+(tsx|ts)\"",
-    "format": "prettier --write \"**/src/*.+(tsx|json|css|ts)\""
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "name": "rescript-nextjs-template",
+  "version": "1.0.0",
+  "author": "Patrick Stapfer <ryyppy@users.noreply.github.com>",
+  "license": "Apache License 2.0",
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "gentype": "^3.44.0",
+    "next": "^10.1.2",
+    "next-transpile-modules": "^4.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "@rescript/react": "^0.10.1",
+    "request": "^2.88.0"
+  },
+  "scripts": {
+    "dev": "next",
+    "debug": "NODE_OPTIONS='--inspect' next",
+    "build": "bsb -clean-world -make-world && next build",
+    "now-build": "bsb -clean-world -make-world && next build",
+    "export": "next export",
+    "start": "next start -p $PORT",
+    "res:build": "bsb -make-world",
+    "res:clean": "bsb -clean-world",
+    "res:start": "bsb -make-world -w"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "eslint": "^7.14.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.2.0",
-    "typescript": "^4.0.3"
+    "autoprefixer": "^10.1.0",
+    "bs-platform": "9.0.2",
+    "cssnano": "^4.1.10",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^2.0.4"
   }
 }
